--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="te">
 <head>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Telugu:wght@400;600&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 <meta charset="UTF-8">
 <title data-key="about_title">About Temple</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
