--- a/library.html
+++ b/library.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="te">
 <head>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Telugu:wght@400;600&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 <meta charset="UTF-8">
 <title>Library</title>
 <link rel="stylesheet" href="assets/css/style.css">
