--- a/media.html
+++ b/media.html
@@ -50,38 +50,45 @@
     <button onclick="setLang('en')" id="btn-en">EN</button>
   </div>
 </header>
-<h2>మీడియా రూమ్</h2>
-<p>లైవ్ దర్శనం, వీడియోలు మరియు సోషల్ మీడియా అప్‌డేట్స్.</p>
+
+
+<h2 data-key="media_title"></h2>
+<p data-key="media_desc"></p>
 
 <section class="media-section">
 
-  <h2>📿 ప్రతి రోజు లైవ్ ప్రత్యక్ష ప్రసారం</h2>
-  <p class="subtitle">
-    శ్రీ శ్రీ శ్రీ భూనేల సమేత శ్రీ వెంకటేశ్వర స్వామి దేవస్థానం
-  </p>
+  <h2 data-key="media_live_title"></h2>
+  <p class="subtitle" data-key="media_live_subtitle"></p>
 
+
+  
   <div class="media-links">
 
     <a href="https://www.youtube.com/@svbcdtd1664" target="_blank" class="media-card yt">
-      ▶️ YouTube Live Darshan
-    </a>
+  ▶️ <span data-key="media_youtube"></span>
+</a>
 
-    <a href="https://www.facebook.com/share/14S8TD2S9eq/?mibextid=wwXIfr" target="_blank" class="media-card fb">
-      📘 Facebook Live
-    </a>
 
-    <a href="https://www.instagram.com/svbcdtd1664" target="_blank" class="media-card ig">
-      📸 Instagram Updates
-    </a>
+   <a href="https://www.facebook.com/share/14S8TD2S9eq/?mibextid=wwXIfr" target="_blank" class="media-card fb">
+  📘 <span data-key="media_facebook"></span>
+</a>
+
+
+   <a href="https://www.instagram.com/svbcdtd1664" target="_blank" class="media-card ig">
+  📸 <span data-key="media_instagram"></span>
+</a>
+
 
     <a href="mailto:devalthirumalapurdevasthanam@gmail.com" class="media-card mail">
-      📧 Gmail Contact
-      <small>devalthirumalapurdevasthanam@gmail.com</small>
-    </a>
+  📧 <span data-key="media_email"></span>
+  <small>devalthirumalapurdevasthanam@gmail.com</small>
+</a>
 
-    <a href="https://chat.whatsapp.com/JWXN6EINiWN2Ab6FC6DZ0E" target="_blank" class="media-card wa">
-      💬 WhatsApp Group
-    </a>
+    <a href="https://chat.whatsapp.com/EqD0wiKqZGLBOGK3JiV2NQ?mode=gi_t"
+   target="_blank"
+   class="media-card wa">
+  💬 <span data-key="media_whatsapp"></span>
+</a>
 
   </div>
 
