--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 
 </head>
 <body>
-<!-- Background Bhakti Audio -->
-<audio id="bg-audio" loop>
+<audio id="bg-audio" loop preload="auto">
   <source src="assets/audio/om_namo_venkatesaya.mp3" type="audio/mpeg">
 </audio>
 
