--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="te">
 <head>
+<meta charset="UTF-8">
+<title>Contact Us</title>
+
+<link rel="icon" type="image/png" href="assets/images/favicon.png">
+
 <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Telugu:wght@400;600&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-  <meta charset="UTF-8">
-  <title>Contact Us</title>
-  <link rel="stylesheet" href="assets/css/style.css">
+<link rel="stylesheet" href="assets/css/style.css">
  
 </head>
 
