--- a/donations.html
+++ b/donations.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="te">
 <head>
-<link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Telugu:wght@400;600&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 <meta charset="UTF-8">
 <title>Donations</title>
+<link rel="icon" type="image/png" href="assets/images/favicon.png">
+
+<link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Telugu:wght@400;600&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="assets/css/style.css">
 
 </head>
