--- a/gallery.html
+++ b/gallery.html
@@ -3,12 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Temple Gallery</title>
+<link rel="icon" type="image/png" href="assets/images/favicon.png">
 
   <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Telugu:wght@400;600&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <script src="assets/js/lang.js" defer></script>
 </head>
 
 <body>
