--- a/goshala.html
+++ b/goshala.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="te">
 <head>
-<link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Telugu:wght@400;600&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 <meta charset="UTF-8">
 <title>Goshala</title>
+<link rel="icon" type="image/png" href="assets/images/favicon.png">
+
+
+<link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Telugu:wght@400;600&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+
 <link rel="stylesheet" href="assets/css/style.css">
-<script src="assets/js/lang.js" defer></script>
 </head>
 <body>
 
