--- a/goshala.html
+++ b/goshala.html
@@ -62,14 +62,14 @@
 
   <div class="gallery-grid">
 
-    <img src="assets/images/goshala/goshala1.jpg" alt="Goshala Image 1" onclick="openLightbox(this)">
-    <img src="assets/images/goshala/goshala2.jpg" alt="Goshala Image 2" onclick="openLightbox(this)">
-    <img src="assets/images/goshala/goshala3.jpg" alt="Goshala Image 3" onclick="openLightbox(this)">
-    <img src="assets/images/goshala/goshala4.jpg" alt="Goshala Image 4" onclick="openLightbox(this)">
-    <img src="assets/images/goshala/goshala5.jpg" alt="Goshala Image 5" onclick="openLightbox(this)">
-    <img src="assets/images/goshala/goshala6.jpg" alt="Goshala Image 6" onclick="openLightbox(this)">
-    <img src="assets/images/goshala/goshala7.jpg" alt="Goshala Image 7" onclick="openLightbox(this)">
-    <img src="assets/images/goshala/goshala8.jpg" alt="Goshala Image 8" onclick="openLightbox(this)">
+    <img src="assets/images/goshala/goshala1.jpeg" alt="Goshala Image 1" onclick="openLightbox(this)">
+    <img src="assets/images/goshala/goshala2.jpeg" alt="Goshala Image 2" onclick="openLightbox(this)">
+    <img src="assets/images/goshala/goshala3.jpeg" alt="Goshala Image 3" onclick="openLightbox(this)">
+    <img src="assets/images/goshala/goshala4.jpeg" alt="Goshala Image 4" onclick="openLightbox(this)">
+    <img src="assets/images/goshala/goshala5.jpeg" alt="Goshala Image 5" onclick="openLightbox(this)">
+    <img src="assets/images/goshala/goshala6.jpeg" alt="Goshala Image 6" onclick="openLightbox(this)">
+    <img src="assets/images/goshala/goshala7.jpeg" alt="Goshala Image 7" onclick="openLightbox(this)">
+    <img src="assets/images/goshala/goshala8.jpeg" alt="Goshala Image 8" onclick="openLightbox(this)">
 
   </div>
 </section>
