--- a/library.html
+++ b/library.html
@@ -64,6 +64,48 @@
 <h1 data-key="library_title"></h1>
 <p data-key="library_desc"></p>
 
+<!-- ===== LIBRARY DOCUMENTS ===== -->
+<section class="library-section">
+
+  <div class="library-grid">
+
+    <!-- Bhagavad Gita -->
+    <div class="library-card">
+      <h3>📘 శ్రీమద్భగవద్గీత</h3>
+      <p>
+        18 అధ్యాయాలతో కూడిన పవిత్ర గ్రంథం – కర్మ, భక్తి, జ్ఞాన మార్గాల వివరణ.
+      </p>
+      <div class="library-actions">
+        <a href="assets/docs/library/bhagavadgita-full.pdf" target="_blank" class="btn-read">
+          📖 Read
+        </a>
+        <a href="assets/docs/library/bhagavadgita-full.pdf" download class="btn-download">
+          ⬇️ Download
+        </a>
+      </div>
+    </div>
+
+    <!-- Venkateswara Avatharam -->
+    <div class="library-card">
+      <h3>🛕 శ్రీ వెంకటేశ్వర స్వామి అవతారం</h3>
+      <p>
+        స్వయంభూ రూపంలో స్వామి అవతరణ, ఆలయ స్థాపన మరియు భక్తుల కథలు.
+      </p>
+      <div class="library-actions">
+        <a href="assets/docs/library/sri-venkateswara-avatharam.pdf" target="_blank" class="btn-read">
+          📖 Read
+        </a>
+        <a href="assets/docs/library/sri-venkateswara-avatharam.pdf" download class="btn-download">
+          ⬇️ Download
+        </a>
+      </div>
+    </div>
+
+  </div>
+
+</section>
+
+
 <footer class="site-footer">
   <div class="footer-container">
 
