--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     <!-- Center Title -->
     <div class="banner-title">
       <h1 data-key="site_title"></h1>
+       <!-- Temple Tagline (Language Controlled) -->
+  <p class="temple-tagline" data-key="temple_tagline"></p>
     </div>
 
     <!-- Right Logo -->
