--- a/contact.html
+++ b/contact.html
@@ -106,17 +106,30 @@
   </div>
 </section>
 
-<!-- MAP PLACEHOLDER -->
-<section>
-  <h2>Location Map</h2>
-  <div class="card">
-    <p>
-      Google Map will be embedded here later for
-      Sri Sri Sri Bhunela Sametha Sri Venkateshwara Swamy Devasthanam,
-      Devalthirumalpur.
+<!-- LOCATION MAP -->
+<section class="map-section">
+  <h2 data-key="location_map_title"></h2>
+
+  <div class="map-card">
+    <iframe
+      src="https://www.google.com/maps?q=Sri+Sri+Sri+Bhunela+Sametha+Sri+Venkateshwara+Swamy+Devasthanam+Devalthirumalpur&output=embed"
+      width="100%"
+      height="350"
+      style="border:0;border-radius:14px;"
+      allowfullscreen=""
+      loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
+
+    <p class="map-link">
+      📍
+      <a href="https://maps.app.goo.gl/MWeJ1TFpykDmeLoKA?g_st=ic" target="_blank">
+        <span data-key="view_on_google_maps"></span>
+      </a>
     </p>
   </div>
 </section>
+
 
 <footer class="site-footer">
   <div class="footer-bottom">
