--- a/contact.html
+++ b/contact.html
@@ -112,21 +112,20 @@
 
   <div class="map-card">
     <iframe
-      src="https://www.google.com/maps?q=Sri+Sri+Sri+Bhunela+Sametha+Sri+Venkateshwara+Swamy+Devasthanam+Devalthirumalpur&output=embed"
-      width="100%"
-      height="350"
-      style="border:0;border-radius:14px;"
-      allowfullscreen=""
-      loading="lazy"
-      referrerpolicy="no-referrer-when-downgrade">
-    </iframe>
-
-    <p class="map-link">
-      📍
-      <a href="https://maps.app.goo.gl/MWeJ1TFpykDmeLoKA?g_st=ic" target="_blank">
-        <span data-key="view_on_google_maps"></span>
-      </a>
-    </p>
+  src="https://www.google.com/maps?q=16.5079,78.3265&z=16&output=embed"
+  width="100%"
+  height="300"
+  style="border:0;border-radius:14px;"
+  allowfullscreen=""
+  loading="lazy"
+  referrerpolicy="no-referrer-when-downgrade">
+</iframe>
+   <p class="map-link">
+  📍
+  <a href="https://maps.app.goo.gl/MWeJ1TFpykDmeLoKA?g_st=ic" target="_blank">
+    Google మ్యాప్స్‌లో చూడండి
+  </a>
+</p>
   </div>
 </section>
 
