--- a/contact.html
+++ b/contact.html
@@ -112,20 +112,20 @@
 
   <div class="map-card">
     <iframe
-  src="https://www.google.com/maps?q=16.5079,78.3265&z=16&output=embed"
+  src="https://www.google.com/maps?q=886H+522+Devalthirumalpur+Telangana&z=18&output=embed"
   width="100%"
-  height="300"
+  height="280"
   style="border:0;border-radius:14px;"
-  allowfullscreen=""
   loading="lazy"
   referrerpolicy="no-referrer-when-downgrade">
 </iframe>
-   <p class="map-link">
+<p class="map-link">
   📍
   <a href="https://maps.app.goo.gl/MWeJ1TFpykDmeLoKA?g_st=ic" target="_blank">
     Google మ్యాప్స్‌లో చూడండి
   </a>
 </p>
+
   </div>
 </section>
 
