--- a/index.html
+++ b/index.html
@@ -133,7 +133,13 @@
   <div class="info-box">
     <p><strong>Morning:</strong> 6:00 AM – 12:00 PM</p>
     <p><strong>Evening:</strong> 4:00 PM – 9:00 PM</p>
-    <p><strong>Location:</strong> Devalthirumalpur Village</p>
+    <p>
+  <strong>Location:</strong>
+  <a href="https://maps.app.goo.gl/MWeJ1TFpykDmeLoKA" target="_blank">
+    Devalthirumalpur Village 📍
+  </a>
+</p>
+
   </div>
 </section>
 
