--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
   </div>
   <div class="visitor-counter">
   🙏 <span data-key="visitor_label">Visitors</span> :
-  <span id="visitor-count">Loading...</span>
+  <span id="visitor-count">0</span>
 </div>
 
 </section>
@@ -193,15 +193,22 @@
 </footer>
 
 <script>
-fetch("https://api.countapi.xyz/hit/devalthirumalapurdevasthanam/home")
-  .then(res => res.json())
-  .then(data => {
-    document.getElementById("visitor-count").innerText = data.value;
-  })
-  .catch(() => {
-    document.getElementById("visitor-count").innerText = "—";
-  });
+document.addEventListener("DOMContentLoaded", function () {
+  const counterEl = document.getElementById("visitor-count");
+  if (!counterEl) return;
+
+  fetch("https://api.countapi.xyz/hit/devalthirumalapurdevasthanam.com/home")
+    .then(res => res.json())
+    .then(data => {
+      counterEl.textContent = data.value;
+    })
+    .catch(err => {
+      console.error("Visitor counter error:", err);
+      counterEl.textContent = "—";
+    });
+});
 </script>
+
 
 
 <script src="assets/js/lang.js"></script>
