--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ document.addEventListener("DOMContentLoaded", function () {
   }
 
   count = parseInt(count) + 1;
-  localStorage.setItem("templeVisitorCount", count);
+  localStorage.setItem("templeVisitorCount_v1", count);
 
   el.textContent = count;
 });
