--- a/index.html
+++ b/index.html
@@ -194,17 +194,17 @@
 
 <script>
 document.addEventListener("DOMContentLoaded", function () {
-  const el = document.getElementById("visitor-count_v1");
+  const el = document.getElementById("visitor-count");
   if (!el) return;
 
-  let count = localStorage.getItem("templeVisitorCount_v1");
+  let count = localStorage.getItem("templeVisitorCount");
 
   if (!count) {
     count = Math.floor(1000 + Math.random() * 500); 
   }
 
   count = parseInt(count) + 1;
-  localStorage.setItem("templeVisitorCount_v1", count);
+  localStorage.setItem("templeVisitorCount", count);
 
   el.textContent = count;
 });
