--- a/index.html
+++ b/index.html
@@ -183,13 +183,22 @@
 
   </div>
 
-  <div class="footer-bottom">
-    <p>
-      © Sri Sri Sri Bhunela Sametha Sri Venkateshwara Swamy Devasthanam<br>
-      🌐 <a href="https://www.devalthirumalapurdevasthanam.com">
-      www.devalthirumalapurdevasthanam.com</a>
-    </p>
-  </div>
+ <div class="footer-bottom">
+  <p>
+    © Sri Sri Sri Bhunela Sametha Sri Venkateshwara Swamy Devasthanam<br><br>
+
+    🙏 Follow us on<br>
+
+    <a href="https://www.youtube.com/@svbcdtd1664" target="_blank" class="social-icon youtube">
+      ▶ YouTube
+    </a>
+
+    <a href="https://www.instagram.com/svbcdtd1664" target="_blank" class="social-icon instagram">
+      📸 Instagram
+    </a>
+  </p>
+</div>
+
 </footer>
 
 <script>
