--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
         <li><a href="donations.html">Donations</a></li>
         <li><a href="contact.html">Contact</a></li>
         <li><a href="places.html">Nearby Places</a></li>
+        <li><a href="privacy.html">Privacy Policy</a></li>
       </ul>
     </div>
 
