--- a/index.html
+++ b/index.html
@@ -185,17 +185,15 @@
   </div>
 
  <div class="footer-bottom">
-  <p>
-    © Sri Sri Sri Bhunela Sametha Sri Venkateshwara Swamy Devasthanam<br><br>
-
+  <p class="footer-follow">
     🙏 Follow us on<br>
 
-    <a href="https://www.youtube.com/@svbcdtd1664" target="_blank" class="social-icon youtube">
-      ▶ YouTube
+    <a href="https://www.youtube.com/@svbcdtd1664" target="_blank" class="footer-yt">
+      ▶ <span>YouTube</span>
     </a>
 
-    <a href="https://www.instagram.com/svbcdtd1664" target="_blank" class="social-icon instagram">
-      📸 Instagram
+    <a href="https://www.instagram.com/svbcdtd1664" target="_blank" class="footer-ig">
+      📸 <span>Instagram</span>
     </a>
   </p>
 </div>
