--- a/contact.html
+++ b/contact.html
@@ -134,9 +134,18 @@
   <div class="footer-bottom">
     <p>
       © Sri Sri Sri Bhunela Sametha Sri Venkateshwara Swamy Devasthanam<br>
-      🌐 <a href="https://www.devalthirumalapurdevasthanam.com">
-      www.devalthirumalapurdevasthanam.com</a>
     </p>
+	<p class="footer-follow">
+    🙏 Follow us on<br>
+
+    <a href="https://www.youtube.com/@svbcdtd1664" target="_blank" class="footer-yt">
+      ▶ <span>YouTube</span>
+    </a>
+
+    <a href="https://www.instagram.com/svbcdtd1664" target="_blank" class="footer-ig">
+      📸 <span>Instagram</span>
+    </a>
+  </p>
   </div>
 </footer>
 
