--- a/index.html
+++ b/index.html
@@ -184,8 +184,12 @@
 
   </div>
 
- <div class="footer-bottom">
-  <p class="footer-follow">
+ <footer class="site-footer">
+  <div class="footer-bottom">
+    <p>
+      © Sri Sri Sri Bhunela Sametha Sri Venkateshwara Swamy Devasthanam<br>
+    </p>
+	<p class="footer-follow">
     🙏 Follow us on<br>
 
     <a href="https://www.youtube.com/@svbcdtd1664" target="_blank" class="footer-yt">
@@ -196,7 +200,7 @@
       📸 <span>Instagram</span>
     </a>
   </p>
-</div>
+  </div>
 
 </footer>
 
