--- a/index.html
+++ b/index.html
@@ -147,6 +147,24 @@
 
 </section>
 
+<section class="home-credits">
+  <p>
+    <strong>Putta Raghu</strong> – Hyderabad<br>
+    Website Hosting Support
+  </p>
+
+  <p>
+    <strong>N Shiva Shanker Ji</strong> – Hyderabad<br>
+    Website Co-Hosting Support
+  </p>
+
+  <p class="credit-contact">
+    📞 Contact:
+    <a href="tel:7093976136">7093976136</a>,
+    <a href="tel:6305314046">6305314046</a>
+  </p>
+</section>
+
   
 <footer class="site-footer">
   <div class="footer-container">
