--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
         <li><a href="contact.html">Contact</a></li>
         <li><a href="places.html">Nearby Places</a></li>
         <li><a href="privacy.html">Privacy Policy</a></li>
+		<li><a href="child-safety.html">Child-safety</a></li>
       </ul>
     </div>
 
