--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="te">
 <head>
+<meta http-equiv="refresh" content="0; url=launch.html">
+
 <meta charset="UTF-8">
 <title data-key="site_title"></title>
 <link rel="icon" type="image/png" href="assets/images/favicon.png">
