--- a/launch.html
+++ b/launch.html
@@ -1,21 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 <meta charset="UTF-8">
 <title>Launching</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
 
-<style>
-body{
-  margin:0;
-  height:100vh;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  background:linear-gradient(135deg,#fff7e6,#ffe0b2);
-  font-family:Arial, sans-serif;
-  text-align:center;
-}
+<body style="margin:0; height:100vh; display:flex; justify-content:center; align-items:center; background:#fff3e0; font-family:Arial;">
 
-.box{
-  background:#
+<div style="background:#ffffff; padding:40px; border-radius:12px; text-align:center; box-shadow:0 8px 20px rgba(0,0,0,0.2);">
+  <h1 sty
