--- a/launch.html
+++ b/launch.html
@@ -1,12 +1,112 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Launching</title>
+<title>Temple Website Launch</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<style>
+body{
+  margin:0;
+  height:100vh;
+  overflow:hidden;
+  font-family:"Georgia", serif;
+  background:linear-gradient(to bottom,#ffe6a7,#ffd36e);
+  display:flex;
+  justify-content:center;
+  align-items:center;
+}
+
+/* Flower animation */
+.flower{
+  position:absolute;
+  top:-50px;
+  font-size:24px;
+  animation:fall linear infinite;
+  opacity:0.8;
+}
+@keyframes fall{
+  to{
+    transform:translateY(110vh) rotate(360deg);
+  }
+}
+
+/* Launch Card */
+.card{
+  background:rgba(255,255,255,0.92);
+  padding:40px 30px;
+  border-radius:18px;
+  text-align:center;
+  box-shadow:0 12px 35px rgba(0,0,0,0.25);
+  max-width:700px;
+  z-index:10;
+}
+
+.card h1{
+  color:#8b0000;
+  font-size:28px;
+  margin-bottom:10px;
+}
+
+.card h2{
+  color:#b22222;
+  font-size:22px;
+  margin:10px 0;
+}
+
+.card p{
+  font-size:16px;
+  margin-bottom:25px;
+}
+
+.timer{
+  font-size:56px;
+  font-weight:bold;
+  color:#8b0000;
+}
+</style>
 </head>
 
-<body style="margin:0; height:100vh; display:flex; justify-content:center; align-items:center; background:#fff3e0; font-family:Arial;">
+<body>
 
-<div style="background:#ffffff; padding:40px; border-radius:12px; text-align:center; box-shadow:0 8px 20px rgba(0,0,0,0.2);">
-  <h1 sty
+<!-- Launch Content -->
+<div class="card">
+  <h1>🙏 Sri Sri Sri Bhunela Sametha</h1>
+  <h2>Sri Venkateshwara Swamy Devasthanam</h2>
+  <p>If possible, Tirupati. If not, Thirumalapuram</p>
+
+  <div class="timer" id="timer">30</div>
+</div>
+
+<!-- Countdown Script -->
+<script>
+let seconds = 30;
+const timerEl = document.getElementById("timer");
+
+const countdown = setInterval(() => {
+  seconds--;
+  timerEl.innerText = seconds;
+
+  if (seconds <= 0) {
+    clearInterval(countdown);
+    window.location.href = "index.html";
+  }
+}, 1000);
+</script>
+
+<!-- Flower Generator -->
+<script>
+const flowers = ["🌸","🌼","🌺","🌹","🌻"];
+for(let i=0;i<30;i++){
+  let f = document.createElement("div");
+  f.className = "flower";
+  f.innerText = flowers[Math.floor(Math.random()*flowers.length)];
+  f.style.left = Math.random()*100 + "vw";
+  f.style.animationDuration = (5 + Math.random()*5) + "s";
+  f.style.fontSize = (18 + Math.random()*20) + "px";
+  document.body.appendChild(f);
+}
+</script>
+
+</body>
+</html>
