--- a/launch.html
+++ b/launch.html
@@ -71,11 +71,24 @@ body{
 
 <!-- Launch Content -->
 <div class="card">
-  <h1>🙏 Sri Sri Sri Bhunela Sametha</h1>
-  <h2>Sri Venkateshwara Swamy Devasthanam</h2>
-  <p>If possible, Tirupati. If not, Thirumalapuram</p>
+ <h1>🙏 Sri Sri Sri Bhunela Sametha</h1>
+<h2>Sri Venkateshwara Swamy Devasthanam</h2>
 
-  <div class="timer" id="timer">30</div>
+<p style="font-size:18px; font-weight:bold; color:#8b0000;">
+  Grand Opening of Our Temple Website
+</p>
+
+<p style="font-size:15px;">
+  With the divine blessings of Lord Sri Venkateshwara Swamy,
+  we are delighted to inaugurate our official temple website.
+</p>
+
+<p style="font-style:italic;">
+  If possible, Tirupati. If not, Thirumalapuram
+</p>
+
+<div class="timer" id="timer">45</div>
+
 </div>
 
 <!-- Countdown Script -->
