--- a/notifications.html
+++ b/notifications.html
@@ -169,6 +169,7 @@
   <img src="assets/images/web2.jpeg" onclick="openLightbox(1)">
   <img src="assets/images/web3.jpeg" onclick="openLightbox(2)">
   <img src="assets/images/web4.jpeg" onclick="openLightbox(3)">
+  <img src="assets/images/web5.jpeg" onclick="openLightbox(3)">
 </div>
 
 </section>
