--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Telugu:wght@400;600&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="assets/css/style.css">
 
+<title>Deval Thirumalapur Devasthanam | Official Temple Website</title>
+
+<meta name="description" content="Official website of Deval Thirumalapur Devasthanam. Temple history, darshan timings, donations, gallery and contact details." />
+
+<meta name="robots" content="index, follow">
+
+
 </head>
 <body>
 <audio id="bg-audio" loop preload="auto">
